# bluez-zbus

./: Cargo.toml
examples/: bluez-ble-advertise.rs  bluez-ble-gatt.rs  bluez-discovery.rs  bluez-status.rs
src/: lib.rs
src/interface/: le_advertisement1.rs  mod.rs
src/interface/gatt/: application.rs  characteristic1.rs  descriptor.rs  mod.rs  service1.rs  types_.rs
src/interface/gatt/blocking/: application.rs  characteristic1.rs  descriptor.rs  mod.rs  service1.rs
src/proxy/: adapter1.rs  agent_manager1.rs  device1.rs  gatt_manager1.rs  le_advertising_manager1.rs  mod.rs  object_manager.rs  profile_manager1.rs
